# braidpool

./: Cargo.toml  README.md  database.db3
.github/workflows/: dashboard-test.yml  python-unittest.yaml  rust-node.yml
dashboard/: MinerInventory.md  README.md  jest.config.ts  package-lock.json  package.json  start.sh  tsconfig.json
dashboard/api/: .dockerignore  .env.example  README.md  miner.js  package.json  server.js
dashboard/api/utils/: fetchBitcoinPrices.js  fetchBlockChainInfo.js  fetchBlockDetails.js  fetchHashrate.js  fetchLatency.js  fetchMempoolStats.js  fetchPoolInfo.js  fetchRewards.js  rpcMethods.js  rpcWithEnv.js
dashboard/api/utils/__tests__/: fetchBitcoinPrices.test.js  fetchBlockChain.test.js  fetchBlockDetails.test.js  fetchGlobalData.test.js  fetchHashrate.test.js  fetchLatency.test.js  fetchMempoolStats.test.js  fetchRewards.test.js  fetchRpc.test.js  rpcMethods.test.js  rpcWithEnv.test.js
dashboard/api/ws/: handleWebSocketConnection.js
dashboard/api/ws/__tests__/: handleWebSocketConnection.test.js
dashboard/src/: App.tsx  URLs.ts  index.css
dashboard/src/components/: Footer.jsx
dashboard/src/components/BeadsTab/: AdvancedChart.tsx  AnimatedStatCard.tsx  BeadRewardTooltip.tsx  BeadRow.tsx  Constants.ts  DashboardHeader.tsx  MinedSharesExplorer.tsx  TransactionList.tsx
dashboard/src/components/BeadsTab/PoolDominance/: PoolDominance.tsx
dashboard/src/components/BeadsTab/PoolDominance/__tests__/: PoolDominance.test.tsx
dashboard/src/components/BeadsTab/Reward/: Constants.ts  RewardHistoryChart.tsx  RewardStats.tsx  RewardsDashboard.tsx  RewardsSection.tsx  generateRewardHistory.tsx
dashboard/src/components/BeadsTab/Reward/__tests__/: RewardsDashboard.test.tsx  generateRewardHistory.test.tsx
dashboard/src/components/BeadsTab/Trends/: Difficulty.tsx  HashrateTab.tsx  LatencyTab.tsx  TransactionsTab.tsx  TrendsTab.tsx
dashboard/src/components/BeadsTab/Trends/__tests__/: HashrateTab.test.tsx  LatencyTab.test.tsx  TransactionsTab.test.tsx  TrendsTab.test.tsx
dashboard/src/components/BeadsTab/__tests__/: AdvancedChart.test.tsx  AnimatedStatCard.test.tsx  BeadRewardTooltip.test.tsx  BeadRow.test.tsx  MinedSharesExplorer.test.tsx  TransactionList.test.tsx
dashboard/src/components/BeadsTab/lib/: Constants.ts  Types.ts  Utils.ts
dashboard/src/components/BitcoinStats/: Constants.ts  Prices.tsx  RBFTransactionDialog.tsx  RBFTransactionRow.tsx  RBFTransactionTable.tsx  TransactionDialog.tsx  TransactionTable.tsx  Types.ts  Utils.ts
dashboard/src/components/BitcoinStats/__tests__/: Prices.test.tsx  RBFTransactionDialog.test.tsx  RBFTransactionsTable.test.tsx  TransactionDialog.test.tsx  TransactionTable.test.tsx  Utils.test.ts
dashboard/src/components/BraidPoolDAG/: BraidPoolDAG.tsx  BraidPoolDAGUtils.ts  Constants.ts
dashboard/src/components/Dashboard/: BlockDialog.tsx  BlockViewer.tsx  Constants.ts  Dashboard.tsx  MempoolLatencyStats.tsx  RecentBlocksTable.tsx  Types.ts  Utils.ts
dashboard/src/components/Dashboard/__tests__/: BlockDialog.test.tsx  BlockViewer.test.tsx  Utils.test.ts
dashboard/src/components/Installation/: InstallationInstructions.tsx
dashboard/src/components/Installation/__tests__/: InstallationInstructions.test.tsx
dashboard/src/components/Mempool/: Constants.ts  MempoolLatencyStats.tsx  Types.ts
dashboard/src/components/Mempool/__tests__/: MempoolLatencyStats.test.tsx
dashboard/src/components/MinerInventory/: Card.tsx  MineInventoryDashboard.tsx  MinerInventoryDashboard.tsx  Types.ts
dashboard/src/components/NodeHealth/: Bandwidth.tsx  Constants.ts  InfoRow.tsx  Mempool.tsx  Network.tsx  NodeHealth.tsx  Peers.tsx  Types.ts  Utils.ts
dashboard/src/components/NodeHealth/__tests__/: Bandwidth.test.tsx  InfoRow.test.tsx  Mempool.test.tsx  Network.test.tsx  NodeHealth.test.tsx  Peers.test.tsx  Utils.test.ts
dashboard/src/components/common/: Card.tsx  Header.tsx  Types.ts
docs/: braidpool_setup.md  db_query_examples.md
node/: Cargo.toml  README.md  README_MINER_RPC.md  RPC_API_DOCUMENTATION.md  build.rs  sample_miner.json
node/schema/: common.capnp  init.capnp  mining.capnp
node/src/: braid_manager.rs  chain_capnp.rs  cli.rs  common_capnp.rs  config.rs  database.rs  default_braidpool_config.toml  error.rs  init_capnp.rs  ipc.rs  lib.rs  main.rs  mining_capnp.rs  mock_miner.sh  rpc_server.rs  stratum.rs  template_creator.rs
node/src/bead/: mod.rs  tests.rs
node/src/behaviour/: mod.rs  tests.rs
node/src/braid/: error.rs  mod.rs  tests.rs
node/src/committed_metadata/: mod.rs
node/src/db/: db_handlers.rs  init_db.rs  mod.rs  schema.sql
node/src/ipc/: client.rs
node/src/peer_manager/: mod.rs
node/src/uncommitted_metadata/: mod.rs
node/src/utils/: mod.rs  test_utils.rs
tests/: miner_device.py
(+1 files in other folders)
